@@ -3,9 +3,9 @@
 # REQUIRED: ReferenceDir must already exist. It may be created by untaring a
 # previous distribution.
 #
-OldBuild=9
+OldBuild=10
 OldVersion=2.6.0.$OldBuild
-NewBuild=10
+NewBuild=11
 NewVersion=2.6.0.$NewBuild
 
 ChangesDir=mux
